[package]
name = "hc-rs"
version = "0.3.5"
authors = ["XDream8 <WolfsDream@proton.me>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/XDream8/hc-rs"
description = "create hosts file"

[features]
dumb_terminal = ["colored/no-color"]

[dependencies]
colored = "2"
once_cell = "1.17.0"
ureq = "2.7.0"
seahorse = "2.1"
bloomy-rs = "0.1.0"

[profile.release]
lto = "thin"

[profile.optimized]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
