[package]
name = "hc-rs"
version = "0.3.6"
authors = ["XDream8 <WolfsDream@proton.me>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/XDream8/hc-rs"
description = "create hosts file"

[features]
dumb_terminal = ["colored/no-color"]

[dependencies]
colored = "3"
ureq = "3.0.12"
seahorse = "2.2"

[profile.release]
lto = "thin"

[profile.optimized]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
