[package]
name = "hc-rs"
version = "0.3.7"
authors = ["XDream8 <WolfsDream@proton.me>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/XDream8/hc-rs"
description = "create hosts file"

[dependencies]
ureq = "3.0.12"
thiserror = "2.0.12"
clap = { version = "4.5.58", features = ["derive"] }

[profile.release]
lto = "thin"

[profile.optimized]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
